--- a/ml-foundation/SFrames.ipynb
+++ b/ml-foundation/SFrames.ipynb
@@ -9,40 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import graphlab\n",
+    "import graphlab as gl\n",
     "from pandas import Series, DataFrame\n",
     "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[INFO] This non-commercial license of GraphLab Create is assigned to iliassweb@gmail.comand will expire on September 22, 2016. For commercial licensing options, visit https://dato.com/buy/.\n",
-      "\n",
-      "[INFO] Start server at: ipc:///tmp/graphlab_server-15804 - Server binary: /home/zax/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1443510964.log\n",
-      "[INFO] GraphLab Server Version: 1.6.1\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "PROGRESS: Finished parsing file /home/zax/ml-foundation/people-example.csv\n",
-      "PROGRESS: Parsing completed. Parsed 7 lines in 0.059917 secs.\n",
+      "PROGRESS: Parsing completed. Parsed 7 lines in 0.038828 secs.\n",
       "------------------------------------------------------\n",
       "Inferred types from first line of file as \n",
       "column_type_hints=[str,str,str,int]\n",
@@ -51,108 +41,69 @@
       "the column_type_hints argument\n",
       "------------------------------------------------------\n",
       "PROGRESS: Finished parsing file /home/zax/ml-foundation/people-example.csv\n",
-      "PROGRESS: Parsing completed. Parsed 7 lines in 0.017049 secs.\n"
+      "PROGRESS: Parsing completed. Parsed 7 lines in 0.017301 secs.\n"
      ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css\"\n",
+       "}));\n",
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//dato.com/files/canvas/1.6.1/css/canvas.css\"\n",
+       "}));\n",
+       "\n",
+       "            (function(){\n",
+       "\n",
+       "                var e = null;\n",
+       "                if (typeof element == 'undefined') {\n",
+       "                    var scripts = document.getElementsByTagName('script');\n",
+       "                    var thisScriptTag = scripts[scripts.length-1];\n",
+       "                    var parentDiv = thisScriptTag.parentNode;\n",
+       "                    e = document.createElement('div');\n",
+       "                    parentDiv.appendChild(e);\n",
+       "                } else {\n",
+       "                    e = element[0];\n",
+       "                }\n",
+       "\n",
+       "                if (typeof requirejs !== 'undefined') {\n",
+       "                    // disable load timeout; ipython_app.js is large and can take a while to load.\n",
+       "                    requirejs.config({waitSeconds: 0});\n",
+       "                }\n",
+       "\n",
+       "                require(['//dato.com/files/canvas/1.6.1/js/ipython_app.js'], function(IPythonApp){\n",
+       "                    var app = new IPythonApp();\n",
+       "                    app.attachView('sframe','Summary', {\"ipython\": true, \"sketch\": {\"Last Name\": {\"complete\": true, \"numeric\": false, \"num_unique\": 7, \"num_undefined\": 0, \"progress\": 1.0, \"frequent_items\": {\"Brown\": {\"frequency\": 1, \"value\": \"Brown\"}, \"Cooper\": {\"frequency\": 1, \"value\": \"Cooper\"}, \"Smith\": {\"frequency\": 1, \"value\": \"Smith\"}, \"Jone\": {\"frequency\": 1, \"value\": \"Jone\"}, \"Campbell\": {\"frequency\": 1, \"value\": \"Campbell\"}, \"Ward\": {\"frequency\": 1, \"value\": \"Ward\"}, \"Williams\": {\"frequency\": 1, \"value\": \"Williams\"}}, \"size\": 7}, \"First Name\": {\"complete\": true, \"numeric\": false, \"num_unique\": 7, \"num_undefined\": 0, \"progress\": 1.0, \"frequent_items\": {\"Alex\": {\"frequency\": 1, \"value\": \"Alex\"}, \"Malcolm\": {\"frequency\": 1, \"value\": \"Malcolm\"}, \"Felix\": {\"frequency\": 1, \"value\": \"Felix\"}, \"Alice\": {\"frequency\": 1, \"value\": \"Alice\"}, \"Derek\": {\"frequency\": 1, \"value\": \"Derek\"}, \"Bob\": {\"frequency\": 1, \"value\": \"Bob\"}, \"Tod\": {\"frequency\": 1, \"value\": \"Tod\"}}, \"size\": 7}, \"age\": {\"std\": 0.989743318610787, \"complete\": true, \"min\": 22.0, \"max\": 25.0, \"quantile\": [22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 22.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 23.0, 24.0, 24.0, 24.0, 24.0, 24.0, 24.0, 24.0, 24.0, 24.0, 24.0, 24.0, 24.0, 24.0, 24.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0], \"median\": 23.0, \"numeric\": true, \"num_unique\": 4, \"num_undefined\": 0, \"var\": 0.9795918367346939, \"progress\": 1.0, \"size\": 7, \"frequent_items\": {\"24\": {\"frequency\": 1, \"value\": 24}, \"25\": {\"frequency\": 1, \"value\": 25}, \"22\": {\"frequency\": 2, \"value\": 22}, \"23\": {\"frequency\": 3, \"value\": 23}}, \"mean\": 23.142857142857146}, \"Country\": {\"complete\": true, \"numeric\": false, \"num_unique\": 6, \"num_undefined\": 0, \"progress\": 1.0, \"frequent_items\": {\"Canada\": {\"frequency\": 1, \"value\": \"Canada\"}, \"England\": {\"frequency\": 1, \"value\": \"England\"}, \"USA\": {\"frequency\": 1, \"value\": \"USA\"}, \"Poland\": {\"frequency\": 1, \"value\": \"Poland\"}, \"United States\": {\"frequency\": 2, \"value\": \"United States\"}, \"Switzerland\": {\"frequency\": 1, \"value\": \"Switzerland\"}}, \"size\": 7}}, \"selected_variable\": {\"name\": [\"sf\"], \"descriptives\": {\"rows\": 7, \"columns\": 4}, \"view_component\": \"Summary\", \"view_file\": \"sframe\", \"view_params\": {\"y\": null, \"x\": null, \"columns\": [\"First Name\", \"Last Name\", \"Country\", \"age\"], \"view\": null}, \"view_components\": [\"Summary\", \"Table\", \"Bar Chart\", \"BoxWhisker Plot\", \"Line Chart\", \"Scatter Plot\", \"Heat Map\", \"Plots\"], \"type\": \"SFrame\", \"columns\": [{\"dtype\": \"str\", \"name\": \"First Name\"}, {\"dtype\": \"str\", \"name\": \"Last Name\"}, {\"dtype\": \"str\", \"name\": \"Country\"}, {\"dtype\": \"int\", \"name\": \"age\"}], \"column_identifiers\": [\"Last Name\", \"First Name\", \"age\", \"Country\"]}, \"columns\": [{\"dtype\": \"str\", \"name\": \"First Name\"}, {\"dtype\": \"str\", \"name\": \"Last Name\"}, {\"dtype\": \"str\", \"name\": \"Country\"}, {\"dtype\": \"int\", \"name\": \"age\"}]}, e);\n",
+       "                });\n",
+       "            })();\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "## Here pandas is working\n",
     "df = pd.read_csv('people-example.csv')\n",
-    "sf = graphlab.SFrame('people-example.csv')"
+    "\n",
+    "## GraphLab \n",
+    "sf = gl.SFrame('people-example.csv')\n",
+    "sf.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>First Name</th>\n",
-       "      <th>Last Name</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>age</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>Smith</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Alice</td>\n",
-       "      <td>Williams</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Malcolm</td>\n",
-       "      <td>Jone</td>\n",
-       "      <td>England</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Felix</td>\n",
-       "      <td>Brown</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Alex</td>\n",
-       "      <td>Cooper</td>\n",
-       "      <td>Poland</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Tod</td>\n",
-       "      <td>Campbell</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Derek</td>\n",
-       "      <td>Ward</td>\n",
-       "      <td>Switzerland</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  First Name Last Name        Country  age\n",
-       "0        Bob     Smith  United States   24\n",
-       "1      Alice  Williams         Canada   23\n",
-       "2    Malcolm      Jone        England   22\n",
-       "3      Felix     Brown            USA   23\n",
-       "4       Alex    Cooper         Poland   23\n",
-       "5        Tod  Campbell  United States   22\n",
-       "6      Derek      Ward    Switzerland   25"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
+    "### Pandas DataFrame\n",
     "people_data = DataFrame(df)\n",
     "people_data"
    ]
@@ -256,26 +207,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# Using canvas "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'module' object has no attribute 'Canvas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-6fdcb00b3d9d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCanvas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_target\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ipynb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'module' object has no attribute 'Canvas'"
-     ]
+     "data": {
+      "application/javascript": [
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css\"\n",
+       "}));\n",
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//dato.com/files/canvas/1.6.1/css/canvas.css\"\n",
+       "}));\n",
+       "\n",
+       "            (function(){\n",
+       "\n",
+       "                var e = null;\n",
+       "                if (typeof element == 'undefined') {\n",
+       "                    var scripts = document.getElementsByTagName('script');\n",
+       "                    var thisScriptTag = scripts[scripts.length-1];\n",
+       "                    var parentDiv = thisScriptTag.parentNode;\n",
+       "                    e = document.createElement('div');\n",
+       "                    parentDiv.appendChild(e);\n",
+       "                } else {\n",
+       "                    e = element[0];\n",
+       "                }\n",
+       "\n",
+       "                if (typeof requirejs !== 'undefined') {\n",
+       "                    // disable load timeout; ipython_app.js is large and can take a while to load.\n",
+       "                    requirejs.config({waitSeconds: 0});\n",
+       "                }\n",
+       "\n",
+       "                require(['//dato.com/files/canvas/1.6.1/js/ipython_app.js'], function(IPythonApp){\n",
+       "                    var app = new IPythonApp();\n",
+       "                    app.attachView('sframe','Plots', {\"selected_variable\": {\"name\": [\"sf\"], \"descriptives\": {\"rows\": 7, \"columns\": 4}, \"view_component\": \"Plots\", \"view_file\": \"sframe\", \"view_params\": {\"y\": \"age\", \"x\": \"Country\", \"columns\": [\"First Name\", \"Last Name\", \"Country\", \"age\"], \"view\": \"Scatter Plot\"}, \"view_components\": [\"Summary\", \"Table\", \"Bar Chart\", \"BoxWhisker Plot\", \"Line Chart\", \"Scatter Plot\", \"Heat Map\", \"Plots\"], \"type\": \"SFrame\", \"columns\": [{\"dtype\": \"str\", \"name\": \"First Name\"}, {\"dtype\": \"str\", \"name\": \"Last Name\"}, {\"dtype\": \"str\", \"name\": \"Country\"}, {\"dtype\": \"int\", \"name\": \"age\"}], \"column_identifiers\": [\"Last Name\", \"First Name\", \"age\", \"Country\"]}, \"complete\": 1, \"ipython\": true, \"progress\": 1.0, \"data\": [[24, 24], [23, 23], [22, 22], [23, 23], [23, 23], [22, 22], [25, 25]], \"columns\": [{\"dtype\": \"str\", \"name\": \"First Name\"}, {\"dtype\": \"str\", \"name\": \"Last Name\"}, {\"dtype\": \"str\", \"name\": \"Country\"}, {\"dtype\": \"int\", \"name\": \"age\"}]}, e);\n",
+       "                });\n",
+       "            })();\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "pd.Canvas.set_target('ipynb')"
+    "gl.canvas.set_target('ipynb')\n",
+    "sf.show(view=\"Scatter Plot\", x=\"Country\", y=\"age\")"
    ]
   },
   {
